# kimi-cli

./: .codexignore  .commit-msg.txt  .coverage  .gitignore  .pre-commit-config.yaml  .python-version  .watch_merge.sh  AGENTS.md  AI_CODE_REVIEW.md  ALIBABA_DASHSCOPE_SETUP.md  BEGINNER_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPLETE_EXECUTION_FLOW_DOCUMENTATION.md  CONTRIBUTING.md  ISSUE_208_FIX.md  KIMISOUL_FUNCTIONALITY_DOCUMENTATION.md  LICENSE  Makefile  PLANS.md  PR_DESCRIPTION.md  README.md  SECURITY.md  THINKING_MODE_IMPLEMENTATION.md  TODO_SHELL_CONFIG.md  Task.md  Task2.md  Task3.md  USAGE_COMMAND_IMPLEMENTATION.md  Untitled  __init__.py  analysis.ipynb  apply_kimi_patch.py  background-task-impl.md  clean-kimi-builder-rhel97.sh  flake.nix  get_predictions.py  i18n.py  kimi.spec  kimi_enterprise_complete.py  (+9 more)
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: pr-body.md  pr-title-cheker-config.json
.monoco/: project.yaml  workspace.yaml
MoonshotAI/: kimi-cli
agenthooks/: .gitignore  README.md  README.zh.md
agenthooks/hooks-ref/: .gitignore  README.md  README.zh.md  pyproject.toml
agenthooks/hooks-ref/src/agenthooks_ref/: __init__.py  cli.py  discovery.py  errors.py  models.py  parser.py  prompt.py  validator.py
agenthooks/hooks-ref/tests/: __init__.py  test_parser.py  test_prompt.py  test_validator.py
benchmarking/: __init__.py  kimi_solver.py  main.py  runtime.py
desktop/: Cargo.toml  tauri.conf.json
desktop/icons/: icon.icns
desktop/src/: main.rs
docs/: AGENTS.md  outline.md  package-lock.json  package.json
examples/: bedrock-mantle.md
examples/kimi-cli-acp-example/: README.md  advanced_client.py  pyproject.toml  simple_client.py
gitrekt/: README.md  server.ts
kimi-tutorial/: 00-preface.md  01-core-concepts.md  02-environment-setup.md  02-placeholder.md  03-minimal-agent.md  04-tool-system.md  05-context-management.md  05-placeholder.md  (+37 more)
(+1954 files in other folders)
