[project]
name = "agenthooks-ref"
version = "0.1.0"
description = "Reference library for Agent Hooks"
license = "Apache-2.0"
readme = "README.md"
authors = [
    { name = "Kimi Team", email = "support@moonshot.cn" }
]
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "strictyaml>=1.7.3",
]

[project.scripts]
agenthooks-ref = "agenthooks_ref.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agenthooks_ref"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "UP", "B", "SIM", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
